--- a/workshop/exercise-2/exercise-2-1/index.html
+++ b/workshop/exercise-2/exercise-2-1/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Exercise 2</title>
+    <link rel="stylesheet" href="../assets/styles.css">
   </head>
   <body>
     <main>
@@ -10,5 +11,6 @@
       <ol id="track" class="track"></ol>
     </main>
     <script src="app.js"></script>
+    <script src="../assets/frogStable.js"></script>
   </body>
 </html>
